--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
   --end-node-color: #ffa69e;
   --border-cell-color: #afd8f8;
   --path-color: #faf3dd;
-  --visited-node-color: ##98fb98;
+  --visited-node-color: #98fb98;
 }
 
 html,
