--- a/src/app/Grid/grid.component.html
+++ b/src/app/Grid/grid.component.html
@@ -1,4 +1,9 @@
-<app-header (visualise)="onVisualise()" (diagonal)="onDiagonal()"></app-header>
+<app-header
+  (visualise)="onVisualise()"
+  (diagonal)="onDiagonal()"
+  (clearPath)="onClearPath()"
+  (randomWalls)="onRandomWalls()"
+></app-header>
 
 <div class="gridCtn">
   <table>
@@ -8,8 +13,10 @@
         [ngClass]="{
           startNode: cell.isStartNode,
           endNode: cell.isEndNode,
-          visitedNode: cell.isVisited && !cell.isStartNode && !cell.isEndNode,
-          pathNode: cell.isPath && !cell.isStartNode && !cell.isEndNode
+          visitedNode:
+            cell.isVisited && trace && !cell.isStartNode && !cell.isEndNode,
+          pathNode: cell.isPath && !cell.isStartNode && !cell.isEndNode,
+          wallNode: cell.isWall && !cell.isStartNode && !cell.isEndNode
         }"
         (click)="handleCell(cell)"
         class="cell animNode"
