--- a/src/app/Grid/grid.component.html
+++ b/src/app/Grid/grid.component.html
@@ -19,7 +19,7 @@
           wallNode: cell.isWall && !cell.isStartNode && !cell.isEndNode
         }"
         (click)="handleCell(cell)"
-        class="cell animNode"
+        class="cell animNode left-hr"
       ></td>
     </tr>
   </table>
