--- a/src/app/Grid/grid.component.css
+++ b/src/app/Grid/grid.component.css
@@ -14,6 +14,8 @@ table {
   height: 25px;
   width: 25px;
   border: 1px solid var(--border-cell-color);
+  padding: 0;
+  position: relative;
 }
 
 .endNode {
