--- a/src/app/Grid/grid.component.css
+++ b/src/app/Grid/grid.component.css
@@ -14,8 +14,7 @@ table {
   height: 25px;
   width: 25px;
   border: 1px solid var(--border-cell-color);
-  padding: 0;
-  position: relative;
+  padding: 1px;
 }
 
 .endNode {
@@ -51,18 +50,16 @@ table {
 @keyframes node-animation-start {
   0% {
     transform: scale(0.3);
-    border-radius: 50%;
     background-color: var(--start-node-color);
   }
-  50% {
-    transform: scale(1.2);
-    border-radius: 20%;
 
+  50% {
+    transform: scale(1.3);
     background-color: var(--start-node-color);
   }
+
   100% {
     transform: scale(1);
-    border-radius: 0;
     background-color: var(--start-node-color);
   }
 }
@@ -70,17 +67,16 @@ table {
 @keyframes node-animation-end {
   0% {
     transform: scale(0.3);
-    border-radius: 50%;
     background-color: var(--end-node-color);
   }
+
   50% {
-    transform: scale(1.2);
-    border-radius: 20%;
+    transform: scale(1.3);
     background-color: var(--end-node-color);
   }
+
   100% {
     transform: scale(1);
-    border-radius: 0;
     background-color: var(--end-node-color);
   }
 }
