--- a/src/app/Header/header.component.css
+++ b/src/app/Header/header.component.css
@@ -7,11 +7,7 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: left;
+  justify-content: space-around;
   margin-top: 20px;
   width: 40%;
-}
-
-.filterRow > *:not(:last-child) {
-  margin-right: 20px;
 }
