--- a/src/app/Header/header.component.css
+++ b/src/app/Header/header.component.css
@@ -3,11 +3,27 @@ h1 {
   margin-top: 20px;
 }
 
+.topBar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 20px;
+}
+
 .filterRow {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin-top: 20px;
   width: 40%;
+  padding-bottom: 1.34375em;
+}
+
+.algoDiv {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: end;
+  margin-right: 10px;
 }
