--- a/src/app/Grid/grid.component.html
+++ b/src/app/Grid/grid.component.html
@@ -35,4 +35,14 @@
   </table>
 
   <p class="pathInfos">{{ this.pathInfos }}</p>
+  <div id="githubLink">
+    <p>
+      Hosted on
+      <a
+        href="https://github.com/hugoBuissez/angular-pathfinder"
+        target="_blank"
+        >Github</a
+      >
+    </p>
+  </div>
 </div>
