--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -1,8 +1,6 @@
-<h1 style="text-transform: uppercase">angular pathfinder</h1>
-
-<mat-divider></mat-divider>
-
 <div class="topBar">
+  <h1>angular pathfinder</h1>
+
   <div class="filterRow">
     <button
       mat-stroked-button
@@ -26,13 +24,6 @@
       Clear Path
     </button>
 
-    <mat-checkbox class="example-margin" (click)="emitTrace()"
-      >Show trace</mat-checkbox
-    >
-    <mat-checkbox class="example-margin" (click)="emitDiagonal()">
-      Allow diagonal</mat-checkbox
-    >
-
     <button
       mat-raised-button
       color="primary"
@@ -41,8 +32,17 @@
     >
       Visualise
     </button>
+
+    <mat-checkbox class="example-margin" (click)="emitTrace()"
+      >Show trace</mat-checkbox
+    >
+
+    <mat-checkbox class="example-margin" (click)="emitDiagonal()">
+      Allow diagonal</mat-checkbox
+    >
   </div>
-  <div class="algoDiv">
+
+  <!-- <div class="algoDiv">
     <mat-form-field appearance="fill">
       <mat-label>Pick an algorithm</mat-label>
       <mat-select [(value)]="selectedAlgorithm">
@@ -51,6 +51,5 @@
           option
         }}</mat-option>
       </mat-select>
-    </mat-form-field>
-  </div>
-</div>
+    </mat-form-field>   </div>
+--></div>
