--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -34,11 +34,13 @@
     </button>
 
     <mat-checkbox class="example-margin" (click)="emitTrace()"
-      >Show trace</mat-checkbox
+    >Show trace
+    </mat-checkbox
     >
 
     <mat-checkbox class="example-margin" (click)="emitDiagonal()">
-      Allow diagonal</mat-checkbox
+      Allow diagonal
+    </mat-checkbox
     >
   </div>
 
